# shellinabox-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.md
scripts/: build.sh
src/: main.rs  server.rs
static/: index.html  shellinabox_web.js
tests/: server_tests.rs
web/: Cargo.toml
web/src/: lib.rs
