[package]
name = "shellinabox-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["WebSocket", "Document", "Window", "HtmlElement", "HtmlCanvasElement", "console"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
sugarloaf = "0.2.18"
raw-window-handle = "0.6"
wgpu = { version = "0.19", features = ["webgl"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
