[package]
name = "shellinabox-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["WebSocket", "Document", "Window", "HtmlElement", "HtmlCanvasElement", "console"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
sugarloaf = { version = "0.2.18", default-features = false }
raw-window-handle = "0.6"
wgpu = { version = "0.19", features = ["webgl"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
# Enable the `js` backend for transitive users of getrandom v0.2
getrandom02 = { package = "getrandom", version = "0.2", features = ["js"] }

[patch.crates-io]
librashader-pack = { path = "../vendor/librashader-pack" }

